k8s/api/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: gsd
spec:
  stripPrefix:
    prefixes:
      - /api
