k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: gsd
spec:
  selector:
    app: api
  ports:
    - port: 8000
      targetPort: 8000
